@@ -140,6 +140,12 @@ Boston, MA 02110-1301, USA.  */
    change their controlling terminal */
 #define vfork fork
 
+/* This should work (at least when compiling with gcc).  But I have no way
+   or intention to verify or even test it.  If you encounter a problem with
+   it, feel free to change this setting, but please add a comment here about
+   why it needed to be changed.  */
+#define GC_MARK_STACK GC_MAKE_GCPROS_NOOPS
+
 /* the end */
 
 /* arch-tag: 5ae7ba00-83b0-4ab3-806a-3e845779191b
