@@ -1,5 +1,7 @@
 2007-09-07  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* s/cygwin.h (GC_MARK_STACK): Enable conservative stack marking.
+
 	* frame.c (x_set_frame_parameters): Check number is positive before
 	using XFASTINT.
 
